agrego cosas a testgit

--- a/Paginas/Testgit.html
+++ b/Paginas/Testgit.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h2>hola estoy probando como funciona git</h2>
-    <p>ayuda por favor porque no entiendo nadaaaaa!!!! jdadksadadjsdjsdja shoroh quien me mando a hacer esto</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident adipisci consequatur officia ea beatae
+        laboriosam, suscipit accusantium necessitatibus quasi sit earum dolores omnis quisquam vel inventore aut totam
+        odio eligendi?</p>
 </body>
-</html> 
+
+</html>
