--- a/Paginas/Earn.html
+++ b/Paginas/Earn.html
@@ -39,7 +39,7 @@
     </header>
     
 
-    <main>
+    <main class="slide-in-fwd-center">
         <div class="main-container-earn">
             <h1>Vini Earn</h1>
             <p>En Vinibank tus criptomonedas rinden más. Si dejas tus cripto en la app, todas las semanas obtendrás
