--- a/Paginas/Tarjeta.html
+++ b/Paginas/Tarjeta.html
@@ -54,7 +54,7 @@
                     <li>✔ Gestionar tus limites de gastos</li>
                 </ul>
             </div>
-                <img src="../imagenes/Tarjeta vinibank.png" alt="tarjeta de Vinibank" class="card-image">
+                <img src="../imagenes/Tarjeta vinibank.png" alt="tarjeta de Vinibank" class="card-image scale-up-hor-center">
         </div>
         
         <div class="main-registrate">
