--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
 
             <main class="main">
-                <div class="index-main-texto">
+                <div class="index-main-texto fade-in-fwd">
                     <div class="main__texto">
-                        <h1 class="h1__titulo">Probando como funciona Git</h1>
+                        <h1 class="h1__titulo">Un banco hecho a tu medida</h1>
                         <p class="main__parrafo">Gestiona tu plata y criptomonedas de la manera más fácil <br> y desde cualquier dispositivo.</p>
                         
                     </div>
@@ -74,7 +74,7 @@
 
                     </div> -->
 
-                <div class="icons">
+                <div class="icons slide-in-fwd-bottom ">
                     <div class="icons_1">
                         <img src="./imagenes/pago-con-tarjeta.png" alt="ícono de una tarjeta" class="icons__image">
                         <h2 class="icons__h2">Pagos en línea</h2>
