--- a/Paginas/Nosotros.html
+++ b/Paginas/Nosotros.html
@@ -60,9 +60,9 @@
             <p>En Vinibank nos enfocamos en la diversidad, por eso nuestro equipo está conformado por gente de todo el
                 mundo, comprometida a brindarte un servicio de
                 calidad los 365 días del año, las 24hs del día.</p>
-            <div class="team-image">
+            
                 <img src="../imagenes/team.jpg" alt="imagen del equipo de Vinibank">
-            </div>
+            
         </div>
 
 
@@ -104,11 +104,12 @@
 
         <div class="cybersecurity">
             <h2>Tu seguridad es nuestra prioridad</h2>
-            <p>Gestionar tu plata y comprar criptomonedas nunca fue tan fácil y seguro.
-                Todas las operaciones que realices están encriptadas, por lo que nadie podrá acceder a ellas. Además
-                podes reforzar tu seguridad con 2FA, activándolo desde Google Authenticator.</p>
-            <div class="cybersecurity-image">
-                <img src="../imagenes/cybersecurity.jpg" alt="imagen del equipo de Vinibank">
+            <div class="cybersecurity-content">
+                <p>Gestionar tu plata y comprar criptomonedas nunca fue tan fácil y seguro.
+                    Todas las operaciones que realices están encriptadas, por lo que nadie podrá acceder a ellas. Además
+                    podes reforzar tu seguridad con 2FA, activándolo desde Google Authenticator.</p>
+                    <img src="../imagenes/cybersecurity.jpg" alt="imagen del equipo de Vinibank" class="cybersecurity-img">
+            </div>
         </div>
 
 
