sass, components, mixing y extend

--- a/Paginas/Ingresa.html
+++ b/Paginas/Ingresa.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="banco, cripto, criptomonedas, ganancias">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Comprá Bitcoin, Ethereum y otras criptomonedas de la forma más fácil. Ganá intereses en crypto todas las semanas y usalas para pagar lo que quieras.">
     <link rel="icon" href="../imagenes/Logo Vinibank.ico">
     <link rel="stylesheet" href="../style_grid.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
