--- a/Paginas/Tarjeta.html
+++ b/Paginas/Tarjeta.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="banco, cripto, criptomonedas, ganancias">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Comprá Bitcoin, Ethereum y otras criptomonedas de la forma más fácil. Ganá intereses en crypto todas las semanas y usalas para pagar lo que quieras.">
     <link rel="icon" href="../imagenes/Logo Vinibank.ico">
     <link rel="stylesheet" href="../style_grid.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -60,7 +61,7 @@
         <div class="main-registrate">
             <div class="registrate-boton">
             <h2>Registarte en nuestra app de manera completamente gratis y comenza hoy mismo a disfrutar de los beneficios </h2>
-            <button class="card-button">Descarga la app</button>
+            <a href="#" class="boton btn3">Descarga la app</a>
             </div>
             <img src="../imagenes/card-login.png" alt="login" class="card-login">
         </div>
