3era entrega del proyecto final

--- a/Paginas/Earn.html
+++ b/Paginas/Earn.html
@@ -81,17 +81,17 @@
             <h2 class="whyvini-title">Por que tener tus cripto en Vinibank?</h2>
             <div class="main-whyvini">
                 <div class="main-container-whyvini_1">
-                    <h2>Recibi hasta un 15% anual en cripto</h2>
+                    <h2 class="icons__h2">Recibi hasta un 15% anual en cripto</h2>
                     <p>Dependiendo de la cripto que tengas en tu wallet</p>
                 </div>
 
                 <div class="main-container-whyvini_2">
-                    <h2>Obtene pagos todas las semanas</h2>
+                    <h2 class="icons__h2">Obtene pagos todas las semanas</h2>
                     <p>Ganancias semanales automaticas en cripto</p>
                 </div>
 
                 <div class="main-container-whyvini_3">
-                    <h2>Usa tus cripto cuando quieras</h2>
+                    <h2 class="icons__h2">Usa tus cripto cuando quieras</h2>
                     <p>Usa y retira tus cripto en el momento que quieras</p>
                 </div>
             </div>
@@ -106,7 +106,7 @@
 
 
     <footer class="footer">
-        <div class="social">
+        <div id="social">
             <p class="footer-title">Seguinos en nuestras redes</p>
             <a href="https://instagram.com" target="blank"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://facebook.com" target="blank"><i class="fa-brands fa-facebook"></i></a>
