--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
             <script src="https://kit.fontawesome.com/8b9a39b65a.js" crossorigin="anonymous"></script>
            
-        <title>Vinibank</title>
+        <title>Vinibank | Inicio</title>
     </head>
 
     <body>
@@ -80,19 +80,19 @@
 
                     <div class="icons_2">
                         <img src="./imagenes/bitcoin.png" alt="ícono de una criptomoneda" class="icons__image">
-                        <h2>Compra Cripto</h2>
+                        <h2 class="icons__h2">Compra Cripto</h2>
                         <p>Intercambia pesos por la cripto que quieras <br> la comisión más baja del mercado</p>
                     </div>
 
                     <div class="icons_3">
                         <img src="./imagenes/discount.png" alt="ícono de porcentaje" class="icons__image">
-                        <h2>Obtené Ganancias</h2>
+                        <h2 class="icons__h2">Obtené Ganancias</h2>
                         <p>Generá rendimientos semanales <br> por dejar tu dinero en la cuenta</p>
                     </div>
                 </div>
 
                 <div class="security-title">
-                    <h2>Tu seguridad es lo mas importante</h2>
+                    <h2>Tu seguridad es lo mas importante</h2>  
                 </div>
                 <div class="security">
                     <img src="./imagenes/celular.png" alt="persona usando celular" class="security__image">
@@ -101,13 +101,13 @@
                         <div class="container-1">
                             <div class="icon-security_1">
                                 <img src="./imagenes/biometric.png" alt="huella">
-                                <h2>Biometria</h2>
+                                <h2 class="icons__h2">Biometria</h2>
                                 <p class="security-p">Usa tu huella digital para acceder y tener mayor seguridad</p>
                             </div>
 
                             <div class="icon-security_2">
                                 <img src="./imagenes/padlock.png" alt="candado">
-                                <h2>Segundo Factor</h2>
+                                <h2 class="icons__h2">Segundo Factor</h2>
                                 <p class="security-p">Para mayor seguridad usamos tokens para todas las operaciones </p>
                             </div>
                         </div>
@@ -116,13 +116,13 @@
                             <div class="icon-security_3">
                                 <img src="./imagenes/user.png" alt="usuario">
                                 
-                                <h2>Personal</h2>
+                                <h2 class="icons__h2">Personal</h2>
                                 <p class="security-p">Solo podras abrir tu cuenta en un dispositivo a la vez</p>
                             </div>
 
                             <div class="icon-security_4">
                                 <img src="./imagenes/encrypted.png" alt="encriptado">
-                                <h2>Encriptado</h2>
+                                <h2 class="icons__h2">Encriptado</h2>
                                 <p class="security-p">Todas las transaciones son encriptadas. Nadie podra acceder a ellas</p>
                             </div>
                         </div>
@@ -175,7 +175,7 @@
             </main>
 
             <footer class="footer">
-                <div class="social">
+                <div id="social">
                     <p class="footer-title">Seguinos en nuestras redes</p>
                     <a href="https://instagram.com" target="blank"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://facebook.com" target="blank"><i class="fa-brands fa-facebook"></i></a>
