--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -16,7 +16,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/8b9a39b65a.js" crossorigin="anonymous"></script>
-    <title>Vinibank</title> 
+    <title>Vinibank | Contacto</title> 
 
 </head>
 
@@ -105,7 +105,7 @@
     </div>
 </main>
 <footer class="footer">
-    <div class="social">
+    <div id="social">
         <p class="footer-title">Seguinos en nuestras redes</p>
         <a href="https://instagram.com" target="blank"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://facebook.com" target="blank"><i class="fa-brands fa-facebook"></i></a>
