--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="Paginas/Tarjeta.html">Tarjeta</a></li>
                     <li><a href="Paginas/Earn.html">Earn</a></li>
                     <li><a href="Paginas/Contacto.html">Contacto</a></li>
-                    <li><a class="active" href="paginas/Ingresa.html">Iniciar Sesión</a></li>
+                    <li><a class="active" href="Paginas/Ingresa.html">Iniciar Sesión</a></li>
                 </ul>
                </nav>  
                 
@@ -58,7 +58,7 @@
                         <p class="main__parrafo">Gestiona tu plata y criptomonedas de la manera más fácil y desde cualquier dispositivo.</p>
                         <div class="botones-index">
                             <a href="./Paginas/Ingresa.html" class="boton btn1">Ingresa</a>
-                            <a href="./Paginas/Ingresa.html" class="boton btn2">Registrate</a>
+                            <a href="./Paginas/Registrarse.html" class="boton btn2">Registrate</a>
                         </div>
                          
                     </div>
